crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__naming__enum_prefix_and_suffix.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/naming.rs
expression: output
---
export interface CreateUserInput {
  readonly user_name: string;
  readonly email_address: string;
}

export interface HTTP_STATUS {
  readonly __typename?: 'HTTP_STATUS';
  readonly statusCode: number;
}

export interface Query {
  readonly __typename?: 'Query';
  readonly _empty?: string | null;
  readonly userProfile?: UserProfile | null;
  readonly httpStatus?: HTTP_STATUS | null;
}

export interface UserProfile {
  readonly __typename?: 'UserProfile';
  readonly firstName: string;
  readonly lastName: string;
}

export type Euser_roleType =
  | 'ADMIN_USER'
  | 'regular_user'
  | 'GuestUser'
  | '%future added value';
