crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__naming__enum_suffix.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/naming.rs
expression: output
---
export interface CreateUserInput {
  readonly user_name: string;
  readonly email_address: string;
}

export interface HTTP_STATUS {
  readonly statusCode: number;
}

export interface Query {
  readonly _empty?: string | null;
  readonly userProfile?: UserProfile | null;
  readonly httpStatus?: HTTP_STATUS | null;
}

export interface UserProfile {
  readonly firstName: string;
  readonly lastName: string;
}

export type user_roleEnum =
  | 'ADMIN_USER'
  | 'regular_user'
  | 'GuestUser'
  | '%future added value';
