crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__naming__naming_camel_case.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/naming.rs
expression: output
---
export interface createUserInput {
  readonly user_name: string;
  readonly email_address: string;
}

export interface http_Status {
  readonly statusCode: number;
}

export interface query {
  readonly _empty?: string | null;
  readonly userProfile?: userProfile | null;
  readonly httpStatus?: http_Status | null;
}

export interface userProfile {
  readonly firstName: string;
  readonly lastName: string;
}

export type user_Role =
  | 'admin_User'
  | 'regular_User'
  | 'guestUser'
  | '%future added value';
