crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__naming__naming_constant_case.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/naming.rs
expression: output
---
export interface CREATE_USER_INPUT {
  readonly user_name: string;
  readonly email_address: string;
}

export interface HTTP_STATUS {
  readonly statusCode: number;
}

export interface QUERY {
  readonly _empty?: string | null;
  readonly userProfile?: USER_PROFILE | null;
  readonly httpStatus?: HTTP_STATUS | null;
}

export interface USER_PROFILE {
  readonly firstName: string;
  readonly lastName: string;
}

export type USER_ROLE =
  | 'ADMIN_USER'
  | 'REGULAR_USER'
  | 'GUEST_USER'
  | '%future added value';
