crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__naming__naming_pascal_case.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/naming.rs
expression: output
---
export interface CreateUserInput {
  readonly user_name: string;
  readonly email_address: string;
}

export interface Http_Status {
  readonly __typename?: 'HTTP_STATUS';
  readonly statusCode: number;
}

export interface Query {
  readonly __typename?: 'Query';
  readonly _empty?: string | null;
  readonly userProfile?: UserProfile | null;
  readonly httpStatus?: Http_Status | null;
}

export interface UserProfile {
  readonly __typename?: 'UserProfile';
  readonly firstName: string;
  readonly lastName: string;
}

export enum User_Role {
  Admin_User = 'ADMIN_USER',
  Regular_User = 'regular_user',
  GuestUser = 'GuestUser',
}
